// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comment List > Delete comment > should delete comment and render comment list 1`] = `
<div>
  <div
    class="_CommentList_214590"
  >
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        Author
      </h2>
    </div>
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        Comment
      </h2>
    </div>
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        In reponse to
      </h2>
    </div>
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        Submmited on
      </h2>
    </div>
    <div
      class="_header_214590"
    />
    <div
      class="_header_214590"
    />
    <ul
      class="_ul_214590"
    >
      <li
        class="_CommentListItem_3a9f83"
      >
        <div
          class="_author_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            foobar
          </p>
          <p
            class="_p_3a9f83"
          >
            foo@bar.com
          </p>
        </div>
        <div
          class="_comment_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            Comment content 2
          </p>
        </div>
        <div
          class="_post_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            Post title 2
          </p>
        </div>
        <div
          class="_submitted_3a9f83"
        >
          4 Dec 2025 at 08:00:00
        </div>
        <a
          class="_edit_3a9f83"
          data-discover="true"
          href="/2/edit"
        >
          Edit
        </a>
        <form
          class="_form_3a9f83"
        >
          <input
            class="_delete_3a9f83"
            type="submit"
            value="Delete"
          />
        </form>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Comment List > Delete comment > should render error 1`] = `
<div>
  <div
    class="_message_214590"
  >
    A network error was encountered
  </div>
</div>
`;

exports[`Comment List > should render comment list 1`] = `
<div>
  <div
    class="_CommentList_214590"
  >
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        Author
      </h2>
    </div>
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        Comment
      </h2>
    </div>
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        In reponse to
      </h2>
    </div>
    <div
      class="_header_214590"
    >
      <h2
        class="_h2_214590"
      >
        Submmited on
      </h2>
    </div>
    <div
      class="_header_214590"
    />
    <div
      class="_header_214590"
    />
    <ul
      class="_ul_214590"
    >
      <li
        class="_CommentListItem_3a9f83"
      >
        <div
          class="_author_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            foobar
          </p>
          <p
            class="_p_3a9f83"
          >
            foo@bar.com
          </p>
        </div>
        <div
          class="_comment_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            Comment content 1
          </p>
        </div>
        <div
          class="_post_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            Post title 1
          </p>
        </div>
        <div
          class="_submitted_3a9f83"
        >
          4 Dec 2025 at 08:00:00
        </div>
        <a
          class="_edit_3a9f83"
          data-discover="true"
          href="/1/edit"
        >
          Edit
        </a>
        <form
          class="_form_3a9f83"
        >
          <input
            class="_delete_3a9f83"
            type="submit"
            value="Delete"
          />
        </form>
      </li>
      <li
        class="_CommentListItem_3a9f83"
      >
        <div
          class="_author_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            foobar
          </p>
          <p
            class="_p_3a9f83"
          >
            foo@bar.com
          </p>
        </div>
        <div
          class="_comment_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            Comment content 2
          </p>
        </div>
        <div
          class="_post_3a9f83"
        >
          <p
            class="_p_3a9f83"
          >
            Post title 2
          </p>
        </div>
        <div
          class="_submitted_3a9f83"
        >
          4 Dec 2025 at 08:00:00
        </div>
        <a
          class="_edit_3a9f83"
          data-discover="true"
          href="/2/edit"
        >
          Edit
        </a>
        <form
          class="_form_3a9f83"
        >
          <input
            class="_delete_3a9f83"
            type="submit"
            value="Delete"
          />
        </form>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Comment List > should render error (unauthorized) 1`] = `
<div>
  <div
    class="_message_214590"
  >
    401 - Unauthorized
  </div>
</div>
`;

exports[`Comment List > should render error 1`] = `
<div>
  <div
    class="_message_214590"
  >
    A network error was encountered
  </div>
</div>
`;

exports[`Comment List > should render loading 1`] = `
<div>
  <div
    class="_message_214590"
  >
    Loading...
  </div>
</div>
`;
